--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:9.8.0'
     implementation 'com.google.android.gms:play-services-auth:9.8.0'
 
+    implementation 'com.github.dmytrodanylyk.shadow-layout:library:1.0.3'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
