--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.housecloud.housecloud"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -30,6 +30,8 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'com.google.firebase:firebase-auth:9.8.0'
     implementation 'com.google.firebase:firebase-core:9.8.0'
+    implementation 'com.google.firebase:firebase-database:9.8.0'
+    implementation 'com.google.firebase:firebase-storage:9.8.0'
     implementation 'com.google.android.gms:play-services-auth:9.8.0'
 
     implementation 'com.github.dmytrodanylyk.shadow-layout:library:1.0.3'
