--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.housecloud.housecloud">
-
+    package="com.housecloud.housecloud"
+    android:versionCode="1"
+    android:versionName="1.0.1">
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -24,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MenuActivity"></activity>
+        <activity android:name=".RegisterActivity"></activity>
     </application>
 
 </manifest>
