--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.housecloud.housecloud"
-    android:versionCode="1"
-    android:versionName="1.0.1">
+    package="com.housecloud.housecloud">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -17,15 +16,15 @@
             android:value="@string/facebook_app_id" />
 
         <activity android:name=".SplashScreenActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MenuActivity"></activity>
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".MenuActivity" />
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
