Mother Fucker a ver si ahora PUTO va

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MenuActivity0" />
-        <activity android:name=".MenuActivity" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".ForgotPassword" />
         <activity
             android:name=".RegisterActivity"
             android:label="@string/title_activity_menu"
