--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,6 @@ dependencies {
 
     implementation 'com.mikhaellopez:circularimageview:3.0.2'
 
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
 apply plugin: 'com.google.gms.google-services'
